Add required  dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,30 @@
-beautifulsoup4
-selenium
-lxml
-geckodriver-autoinstaller
-chromedriver-py
-pandas
-regex
-credentials
+attrs==21.2.0
+beautifulsoup4==4.9.3
+certifi==2021.5.30
+chardet==4.0.0
+chromedriver-py==91.0.4472.19
+coverage==5.5
+credentials==1.1
+geckodriver-autoinstaller==0.1.0
+idna==2.10
+importlib-metadata==4.5.0
+iniconfig==1.1.1
+lxml==4.6.3
+numpy==1.20.3
+packaging==20.9
+pandas==1.2.4
+pluggy==0.13.1
+py==1.10.0
+pyparsing==2.4.7
+pytest==6.2.4
+python-dateutil==2.8.1
+pytz==2021.1
+regex==2021.4.4
+requests==2.25.1
+selenium==3.141.0
+six==1.16.0
+soupsieve==2.2.1
+toml==0.10.2
+typing-extensions==3.10.0.0
+urllib3==1.26.5
+zipp==3.4.1
