--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ python-dateutil==2.8.1
 pytz==2021.1
 regex==2021.4.4
 requests==2.25.1
+responses==0.13.3
 selenium==3.141.0
 six==1.16.0
 soupsieve==2.2.1
