--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,12 @@ test-output/test-books/*
 test-output/test-reviews/*
 geckodriver.log
 .DS_Store
+.coverage
+.pytest_cache
+__pycache__/
+async_results.txt
+htmlcov/
+input/
+pr_template.md
+venv/
+.idea
