feat: add book data bools

--- a/config.ini
+++ b/config.ini
@@ -20,3 +20,24 @@ NO_MATCHES_FILENAME = no_matches
 
 BOOK_TITLE_SIMILARITY_PERCENTAGE = 0.6
 AUTHOR_NAME_SIMILARITY_PERCENTAGE = 0.7
+
+[BOOK_DATA]
+
+BOOK_ID_TITLE = True
+BOOK_ID = True
+BOOK_TITLE = True
+BOOK_SERIES = False
+BOOK_SERIES_URI = False
+ISBN = True
+ISBN13 = False
+YEAR_FIRST_PUBLISHED = True
+AUTHOR = True
+NUM_PAGES = True
+GENRES = False
+PRIMARY_GENRE = True
+SHELVES = False
+LISTS = False
+NUM_RATINGS = False
+NUM_REVIEWS = False
+AVERAGE_RATING = True
+RATING_DISTRIBUTION = False
