--- a/config.ini
+++ b/config.ini
@@ -14,6 +14,7 @@ MATCHES_FILENAME = matches
 NO_MATCHES_DIRECTORY_PATH = get_ids/output/no_matches
 NO_MATCHES_FILENAME = no_matches
 
+
 [MATCH_PERCENTAGES]
 
 # Similarity percentage range is: 0.0 most permissive - 1.0 exact match
@@ -24,7 +25,7 @@ AUTHOR_NAME_SIMILARITY_PERCENTAGE = 0.7
 [BOOK_DATA]
 
 BOOK_ID_TITLE = True
-BOOK_ID = True
+NUMERIC_BOOK_ID = True
 BOOK_TITLE = True
 BOOK_SERIES = False
 BOOK_SERIES_URI = False
