tests: extend get_book_service tests

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,26 @@
+appdirs==1.4.4
 attrs==21.2.0
 beautifulsoup4==4.9.3
+black==21.6b0
 certifi==2021.5.30
 chardet==4.0.0
 chromedriver-py==91.0.4472.19
+click==8.0.1
 coverage==5.5
 credentials==1.1
 geckodriver-autoinstaller==0.1.0
 idna==2.10
 importlib-metadata==4.5.0
 iniconfig==1.1.1
+isort==5.9.3
 lxml==4.6.3
 mock==4.0.3
+mypy-extensions==0.4.3
+nameparser==1.0.6
 numpy==1.20.3
 packaging==20.9
 pandas==1.2.4
+pathspec==0.8.1
 pluggy==0.13.1
 py==1.10.0
 pyparsing==2.4.7
@@ -27,6 +34,7 @@ selenium==3.141.0
 six==1.16.0
 soupsieve==2.2.1
 toml==0.10.2
+typed-ast==1.4.3
 typing-extensions==3.10.0.0
 urllib3==1.26.5
 zipp==3.4.1
