--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+aiohttp==3.7.4.post0
 appdirs==1.4.4
+async-timeout==3.0.1
 attrs==21.2.0
 beautifulsoup4==4.9.3
 black==21.6b0
@@ -15,6 +17,7 @@ iniconfig==1.1.1
 isort==5.9.3
 lxml==4.6.3
 mock==4.0.3
+multidict==5.1.0
 mypy-extensions==0.4.3
 nameparser==1.0.6
 numpy==1.20.3
@@ -25,6 +28,7 @@ pluggy==0.13.1
 py==1.10.0
 pyparsing==2.4.7
 pytest==6.2.4
+pytest-cov==2.12.1
 python-dateutil==2.8.1
 pytz==2021.1
 regex==2021.4.4
@@ -37,4 +41,5 @@ toml==0.10.2
 typed-ast==1.4.3
 typing-extensions==3.10.0.0
 urllib3==1.26.5
+yarl==1.6.3
 zipp==3.4.1
