refactor: setup loose project structure

--- a/config.ini
+++ b/config.ini
@@ -28,17 +28,19 @@ BOOK_ID_TITLE = True
 NUMERIC_BOOK_ID = True
 BOOK_TITLE = True
 BOOK_SERIES = False
-BOOK_SERIES_URI = False
+BOOK_SERIES_URI = True
 ISBN = True
-ISBN13 = False
+ISBN13 = True
 YEAR_FIRST_PUBLISHED = True
-AUTHOR = True
+AUTHOR_FULL_NAME = True
+AUTHOR_FIRST_NAME = True
+AUTHOR_LAST_NAME = True
 NUM_PAGES = True
-GENRES = False
+GENRES = True
 PRIMARY_GENRE = True
-SHELVES = False
-LISTS = False
-NUM_RATINGS = False
-NUM_REVIEWS = False
+SHELVES = True
+LISTS = True
+NUM_RATINGS = True
+NUM_REVIEWS = True
 AVERAGE_RATING = True
-RATING_DISTRIBUTION = False
+RATING_DISTRIBUTION = True
