--- a/config.ini
+++ b/config.ini
@@ -22,25 +22,26 @@ NO_MATCHES_FILENAME = no_matches
 BOOK_TITLE_SIMILARITY_PERCENTAGE = 0.6
 AUTHOR_NAME_SIMILARITY_PERCENTAGE = 0.7
 
-[BOOK_DATA]
+[BOOK]
 
-BOOK_ID_TITLE = True
-NUMERIC_BOOK_ID = True
-BOOK_TITLE = True
-BOOK_SERIES = False
-BOOK_SERIES_URI = True
-ISBN = True
-ISBN13 = True
-YEAR_FIRST_PUBLISHED = True
-AUTHOR_FULL_NAME = True
 AUTHOR_FIRST_NAME = True
+AUTHOR_FULL_NAME = True
 AUTHOR_LAST_NAME = True
-NUM_PAGES = True
-GENRES = True
-PRIMARY_GENRE = True
-SHELVES = True
-LISTS = True
-NUM_RATINGS = True
-NUM_REVIEWS = True
 AVERAGE_RATING = True
-RATING_DISTRIBUTION = True
+GENRES = True
+ISBN = False
+ISBN13 = False
+LISTS = False
+LISTS_URL = True
+NUMBER_OF_PAGES = True
+NUMBER_OF_RATINGS = False
+NUMBER_OF_REVIEWS = False
+NUMERIC_ID = False
+PRIMARY_GENRE = True
+RATING_DISTRIBUTION = False
+SHELVES = False
+SERIES_NAME = True
+SERIES_URL = True
+TITLE = True
+TITLE_ID = False
+YEAR_OF_PUBLICATION = True
