refactor: reafctor book_id

--- a/config.ini
+++ b/config.ini
@@ -2,9 +2,9 @@
 
 PATH_TO_INPUT_FILE = get_ids/input/goodreads_queries.txt
 
-[DELIMITER]
+[QUERY]
 
-INPUT_FILE_DELIMITER = -
+DELIMITER = -
 
 [OUTPUT]
 
@@ -27,19 +27,21 @@ AUTHOR_FULL_NAME = True
 AUTHOR_LAST_NAME = True
 AVERAGE_RATING = True
 GENRES = True
-ISBN = False
-ISBN13 = False
-LISTS = False
+ISBN = True
+ISBN13 = True
+LISTS = True
+NUMBER_OF_LIST_RESULTS = 10
 LISTS_URL = True
 NUMBER_OF_PAGES = True
-NUMBER_OF_RATINGS = False
-NUMBER_OF_REVIEWS = False
-NUMERIC_ID = False
+NUMBER_OF_RATINGS = True
+NUMBER_OF_REVIEWS = True
+NUMERIC_ID = True
 PRIMARY_GENRE = True
-RATING_DISTRIBUTION = False
-SHELVES = False
+RATING_DISTRIBUTION = True
+SHELVES = True
+NUMBER_OF_SHELF_RESULTS = 10
 SERIES_NAME = True
 SERIES_URL = True
 TITLE = True
-TITLE_ID = False
+TITLE_ID = True
 YEAR_OF_PUBLICATION = True
