fix: broken book_id controller

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [INPUT]
 
-PATH_TO_INPUT_FILE = get_ids/input/goodreads_queries.txt
+PATH_TO_INPUT_FILE = user_io/input/goodreads_queries.txt
 
 [QUERY]
 
@@ -8,9 +8,9 @@ DELIMITER = -
 
 [OUTPUT]
 
-MATCHES_DIRECTORY_PATH = get_ids/output/matches
+MATCHES_DIRECTORY_PATH = user_io/output/matches
 MATCHES_FILENAME = matches
-NO_MATCHES_DIRECTORY_PATH = get_ids/output/no_matches
+NO_MATCHES_DIRECTORY_PATH = user_io/output/no_matches
 NO_MATCHES_FILENAME = no_matches
 
 [MATCH_PERCENTAGES]
