docs: small update

--- a/config.ini
+++ b/config.ini
@@ -15,7 +15,7 @@ NO_MATCHES_FILENAME = no_matches
 
 [MATCH_PERCENTAGES]
 
-# Similarity percentage range is: 0.0 most permissive - 1.0 exact match
+# Similarity percentage range is: (most permissive) 0.0...1.0 (exact match)
 
 AUTHOR_NAME_SIMILARITY_PERCENTAGE = 0.7
 BOOK_TITLE_SIMILARITY_PERCENTAGE = 0.6
