refactor: minor changes

--- a/config.ini
+++ b/config.ini
@@ -28,7 +28,7 @@ AUTHOR_LAST_NAME = True
 AVERAGE_RATING = True
 GENRES = True
 ISBN = True
-ISBN13 = False
+ISBN13 = True
 LISTS = True
 NUMBER_OF_LIST_RESULTS = 10
 LISTS_URL = True
@@ -37,11 +37,11 @@ NUMBER_OF_RATINGS = True
 NUMBER_OF_REVIEWS = True
 NUMERIC_ID = True
 PRIMARY_GENRE = True
-RATING_DISTRIBUTION = False
+RATING_DISTRIBUTION = True
 SHELVES = True
 NUMBER_OF_SHELF_RESULTS = 10
-SERIES_NAME = False
-SERIES_URL = False
+SERIES_NAME = True
+SERIES_URL = True
 TITLE = True
-TITLE_ID = False
+TITLE_ID = True
 YEAR_OF_PUBLICATION = True
