feat: introduce author service

--- a/config.ini
+++ b/config.ini
@@ -15,7 +15,7 @@ NO_MATCHES_FILENAME = no_matches
 
 [MATCH_PERCENTAGES]
 
-# Similarity percentage range is: (most permissive) 0.0...1.0 (exact match)
+# Similarity percentage range is
 
 AUTHOR_NAME_SIMILARITY_PERCENTAGE = 0.7
 BOOK_TITLE_SIMILARITY_PERCENTAGE = 0.6
@@ -45,3 +45,29 @@ SERIES_URL = True
 TITLE = True
 TITLE_ID = True
 YEAR_OF_PUBLICATION = True
+
+
+[AUTHOR]
+
+AGE_AT_DEATH = True
+BIRTH_FULL_NAME = True
+BIRTH_FULL_NAME_IN_NATIVE_LANGUAGE = True
+CAUSE_OF_DEATH = True
+COUNTRY_OF_CITIZENSHIP = True
+DATE_OF_BIRTH = True
+DATE_OF_DEATH = True
+EDUCATED_AT = True
+GENDER = True
+GENRES = True
+LAST_WORDS = True
+LIFESTYLE = True
+LITERARY_MOVEMENTS = True
+MANNER_OF_DEATH = True
+NATIVE_LANGUAGE = True
+NOTABLE_WORKS = True
+OCCUPATIONS = True
+PLACE_OF_BIRTH = True
+PLACE_OF_BURIAL = True
+PLACE_OF_DEATH = True
+RELIGION = True
+WRITING_LANGUAGES = True
