misc: code from debian

--- a/config.ini
+++ b/config.ini
@@ -21,6 +21,7 @@ PLACE_OF_BIRTH = True
 PLACE_OF_BURIAL = True
 PLACE_OF_DEATH = True
 RELIGION = True
+WORK_PERIOD_START_YEAR = True
 WRITING_LANGUAGES = True
 
 [BOOK]
@@ -29,19 +30,20 @@ AUTHOR_FIRST_NAME = True
 AUTHOR_FULL_NAME = True
 AUTHOR_LAST_NAME = True
 AVERAGE_RATING = True
+CENTURY_OF_PUBLICATION = True
 GENRES = True
 ISBN = True
-ISBN13 = True
-LISTS = True
+ISBN13 = False
+LISTS = False
 NUMBER_OF_LIST_RESULTS = 10
-LISTS_URL = True
+LISTS_URL = False
 NUMBER_OF_PAGES = True
 NUMBER_OF_RATINGS = True
 NUMBER_OF_REVIEWS = True
 NUMERIC_ID = True
 PRIMARY_GENRE = True
-RATING_DISTRIBUTION = True
-SHELVES = True
+RATING_DISTRIBUTION = False
+SHELVES = False
 NUMBER_OF_SHELF_RESULTS = 10
 SERIES_NAME = True
 SERIES_URL = True
